[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/models/jevilFloor.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/enemies/jevil/enemy_jevil.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/jevilFight/jevilFight.gd" type="Script" id=3]
[ext_resource path="res://objects/battle/USER_SOUL/USER_SOUL.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/battle/assetBattleUI.tres" type="SpriteFrames" id=5]
[ext_resource path="res://assets/models/jevilCarousel.glb" type="PackedScene" id=6]
[ext_resource path="res://assets/characters/ralsei/assetRalsei.tres" type="SpriteFrames" id=7]
[ext_resource path="res://assets/characters/susie/assetSusie.tres" type="SpriteFrames" id=8]
[ext_resource path="res://assets/characters/kris/assetKris.tres" type="SpriteFrames" id=9]
[ext_resource path="res://objects/effects/effectJevilsKnife.tscn" type="PackedScene" id=10]

[node name="jevilFight" type="Node2D"]
script = ExtResource( 3 )

[node name="world" type="Node2D" parent="."]

[node name="jevilBackground3D" type="ViewportContainer" parent="world"]
margin_left = -90.0
margin_top = -75.0
margin_right = 90.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="world/jevilBackground3D"]
size = Vector2( 180, 150 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="jevilBackground" type="Spatial" parent="world/jevilBackground3D/Viewport"]

[node name="Camera" type="Camera" parent="world/jevilBackground3D/Viewport/jevilBackground"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0.378237, 0.968146 )
projection = 1

[node name="jevilFloor" parent="world/jevilBackground3D/Viewport/jevilBackground" instance=ExtResource( 1 )]

[node name="jevilCarousel" parent="world/jevilBackground3D/Viewport/jevilBackground" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, -0.333299, -2.04467 )

[node name="kris" type="AnimatedSprite" parent="world"]
position = Vector2( -64, -15 )
frames = ExtResource( 9 )
animation = "walk"

[node name="susie" type="AnimatedSprite" parent="world"]
position = Vector2( -64, 7 )
frames = ExtResource( 8 )
animation = "walk"

[node name="ralsei" type="AnimatedSprite" parent="world"]
position = Vector2( -64, 29 )
frames = ExtResource( 7 )
animation = "walk"

[node name="effectJevilsKnife" parent="world" instance=ExtResource( 10 )]
position = Vector2( -25, -122 )

[node name="enemy_jevil" parent="." instance=ExtResource( 2 )]
position = Vector2( 69, 9 )

[node name="USER_SOUL_BOX" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )

[node name="Normal" type="StaticBody2D" parent="USER_SOUL_BOX"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="USER_SOUL_BOX/Normal"]
polygon = PoolVector2Array( 32, 32, 32, -32, -32, -32, -32, -34, 34, -34, 34, 34, -34, 34, -34, -32, -32, -32, -32, 32 )

[node name="ColorRect" type="ColorRect" parent="USER_SOUL_BOX/Normal"]
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
color = Color( 0.0823529, 0.121569, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="USER_SOUL_BOX/Normal"]
points = PoolVector2Array( -32, -32, -32, 32, 32, 32, 32, -32, -32, -32 )
width = 1.0
default_color = Color( 0.67451, 0.882353, 0.329412, 1 )

[node name="Wide" type="StaticBody2D" parent="USER_SOUL_BOX"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="USER_SOUL_BOX/Wide"]
polygon = PoolVector2Array( 44, 18, 44, -14, -32, -14, -32, -16, 46, -16, 46, 20, -34, 20, -34, -14, -32, -14, -32, 18 )
disabled = true

[node name="ColorRect" type="ColorRect" parent="USER_SOUL_BOX/Wide"]
margin_left = -32.0
margin_top = -14.0
margin_right = 44.0
margin_bottom = 18.0
color = Color( 0.0823529, 0.121569, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="USER_SOUL_BOX/Wide"]
points = PoolVector2Array( -32, -14, -32, 18, 44, 18, 44, -14, -32, -14 )
width = 1.0
default_color = Color( 0.67451, 0.882353, 0.329412, 1 )

[node name="USER_SOUL" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -50, -28 )

[node name="BattleHud" type="Node2D" parent="."]
position = Vector2( 0, 75 )

[node name="ColorRect" type="ColorRect" parent="BattleHud"]
margin_left = -90.0
margin_top = -16.0
margin_right = 90.0
color = Color( 0.0823529, 0.121569, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="BattleHud"]
position = Vector2( -90, -95.5 )
points = PoolVector2Array( 0, 80, 180, 80 )
width = 1.0
default_color = Color( 0.67451, 0.882353, 0.329412, 1 )

[node name="snap" type="AnimatedSprite" parent="BattleHud"]
position = Vector2( -69, -7 )
frames = ExtResource( 5 )
animation = "snap"

[node name="fight" type="AnimatedSprite" parent="BattleHud"]
position = Vector2( -46, -7 )
frames = ExtResource( 5 )
animation = "fight"

[node name="guard" type="AnimatedSprite" parent="BattleHud"]
position = Vector2( -22, -7 )
frames = ExtResource( 5 )
animation = "guard"

[node name="HealthHud" type="Node2D" parent="."]
position = Vector2( 0, -7 )

[node name="ColorRect" type="ColorRect" parent="HealthHud"]
margin_left = -89.0
margin_top = -74.0
margin_right = -31.0
margin_bottom = -69.0
color = Color( 0.67451, 0.882353, 0.329412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="HealthHud"]
margin_left = -88.0
margin_top = -73.0
margin_right = -32.0
margin_bottom = -70.0
color = Color( 0.0823529, 0.121569, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="HealthHud"]
position = Vector2( -6, -28 )
points = PoolVector2Array( -81, -44, -27, -44 )
width = 1.0
default_color = Color( 0.67451, 0.882353, 0.329412, 1 )
